WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282618
REGRESSION (
285350@main
): Unable to toggle edit menu in overflow scrollers with SelectionHonorsOverflowScrolling off
https://bugs.webkit.org/show_bug.cgi?id=282618
Summary
REGRESSION (285350@main): Unable to toggle edit menu in overflow scrollers wi...
Wenson Hsieh
Reported
2024-11-05 09:53:20 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-05 09:53:39 PST
<
rdar://problem/139291824
>
Wenson Hsieh
Comment 2
2024-11-05 10:00:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36196
EWS
Comment 3
2024-11-05 12:04:22 PST
Committed
286178@main
(8347b6f3f791): <
https://commits.webkit.org/286178@main
> Reviewed commits have been landed. Closing PR #36196 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug