REGRESSION (285350@main): Unable to toggle edit menu in overflow scrollers with SelectionHonorsOverflowScrolling off https://bugs.webkit.org/show_bug.cgi?id=282618 rdar://139291824

Reviewed by Tim Horton.

After the refactoring in https://commits.webkit.org/285350@main, we only consider a tap location to
be inside of the selection rect, if the hit-tested parent scroller is equal to the selection
container's parent scroller. However, this check only makes sense in the case where the internal
feature flag `SelectionHonorsOverflowScrolling` is enabled; when it's disabled, the selection
container is always going to be underneath the main `WKScrollView` despite the fact that hit-testing
may find a `WKChildScrollView`.

Fix this legacy case by simply returning early and skipping the parent scroller check altogether
when the new feature flag is disabled.

* LayoutTests/editing/selection/ios/toggle-callout-bar-after-tap-in-selected-non-editable-text.html:
* LayoutTests/editing/selection/ios/toggle-edit-menu-after-tap-in-overflow-scroller-expected.txt: Added.
* LayoutTests/editing/selection/ios/toggle-edit-menu-after-tap-in-overflow-scroller.html: Added.

Add a new layout test to exercise this change.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _pointIsInsideSelectionRect:outBoundingRect:]):

Canonical link: https://commits.webkit.org/286178@main